--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Long0050.GitHub.io</title>
-  <meta name="description" content="Duy Long">
+  <title>Ngô Duy Long.io</title>
+  <meta name="description" content="CNTT 0902">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
