--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Ngô Duy Long.io</title>
+  <title>Ngô Duy Long</title>
   <meta name="description" content="CNTT 0902">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,10 +22,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Long0050.GitHub.io</h1>
+      <h1 class="title">Ngô Duy Long</h1>
     </header>
     <div id="container">
-      <p class="tagline">Duy Long</p>
+      <p class="tagline">CNTT 0902</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
